--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
   align-items: center;
   background-color: #000;
   color: white;
-  padding: 10px 20px;
+  padding: 5x 10px;
   width: 100%;
   height: 40px; /* Fixed height */
   position: fixed;
@@ -18,7 +18,7 @@
 
 /* Logo */
 .logo {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: bold;
   color: white;
 }
